--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="main_title">Your Lists</string>
 
     <string name="rv_shopping_lists_placeholder_title">Header</string>
     <string name="rv_shopping_lists_placeholder_subtitle">Subheader</string>
